# rs232_remote_access

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  esp-idf-vscode-generated.gdb  main.cpp  partitions.csv  praca_inzynierska_device.code-workspace  sdkconfig  sdkconfig.old
app_debug/: CMakeLists.txt  main.cpp
app_debug/include/: Setup_deb.hpp
app_debug/resources/: .gitignore  test_setup.conf
components/MQTTClient-C/: CMakeLists.txt
components/MQTTClient-C/src/: MQTTClient.h
components/MQTTPacket/: CMakeLists.txt
components/MQTTPacket/src/: MQTTPacket.c
components/mbedtls_sim800/: CMakeLists.txt
components/mbedtls_sim800/include/: mbedtls_sockets.h  net_sockets_sim800.h
components/mbedtls_sim800/port/: net_sockets_sim800.c
components/mbedtls_sim800/src/: mbedtls_sockets.c
components/sim800l/: CMakeLists.txt  LL_SIM.c  SIM.c  SIM_cmd.c  SIM_common.c  SIM_common_def.c
components/sim800l/include/: LL_SIM.h  SIM.h  SIM_cmd.h  SIM_common.h  SIM_common_def.h
components/sim800l/src/: LL_SIM.c  SIM.c  SIM_common.c  SIM_common_def.c
include/main/: CMakeLists.txt  Controller.hpp  Dispacher.hpp  Main_defs.hpp  README.md
include/main/deprecated/: Dispacher.hpp  Dispacher_impl.hpp
include/main/include/: Debug_monitor.hpp  Dev_cont.hpp  Dev_ext.hpp  Exception_handler.hpp  Impl_adder.hpp  Impl_cont.hpp  Impl_getter.hpp  Impl_remover.hpp
include/main/src/: Debug_monitor.cpp  Dev_ext.cpp  Dev_remover.cpp  Exception_handler.cpp  Impl_adder.cpp
include/main/unit_tests/: Main_tests.cpp
include/serial_ctrl/: Base_serial_ctrl.hpp  CMakeLists.txt  Exchanger.hpp  Ip_serial_ctrl.hpp  Serial_ctrl.hpp  Serial_ctrl_helper.hpp  Serial_info.hpp  Shared_helper.hpp  Side.hpp
include/serial_ctrl/compl/: Under_setter.cpp  User_setter.cpp
include/serial_ctrl/defs/: CMakeLists.txt  README.md
include/serial_ctrl/deprecated/: Flow.hpp  Serial_ctrl.hpp  Serial_ctrl_helper.hpp  Serial_info.hpp  Serial_settings_intf.hpp  Traffic_mqtt_local.hpp
include/serial_ctrl/dev_record/: CMakeLists.txt
include/serial_ctrl/device/: CMakeLists.txt  Device.hpp  README.md
include/serial_ctrl/device_impl/: CMakeLists.txt
include/serial_ctrl/ext_management/: CMakeLists.txt
include/serial_ctrl/extensions/: CMakeLists.txt
include/serial_ctrl/general/: User_controller.cpp
include/serial_ctrl/general_interface/: CMakeLists.txt
include/serial_ctrl/impl/: CMakeLists.txt  Mqtt_settings.hpp  Mqtt_side.hpp  Serial_base.cpp  Serial_ext_base.cpp  Serial_settings.cpp  Serial_settings.hpp  Serial_side.cpp  Serial_side.hpp
include/serial_ctrl/lr/: Mqtt_complete.cpp  Mqtt_settings.cpp  Mqtt_settings.hpp  Mqtt_side.cpp  Mqtt_side.hpp  Serial_settings.cpp  Serial_settings.hpp  Serial_side.cpp  Serial_side.hpp
include/serial_ctrl/msgs/: Mqtt_msg.hpp  Mqtt_msg_cont.hpp
include/serial_ctrl/serial/: CMakeLists.txt
include/serial_ctrl/sides/: CMakeLists.txt  Mqtt_settings.hpp  Mqtt_side.hpp  README.md  Serial_settings.hpp  Serial_side.hpp  Serial_side_connect.hpp
include/serial_ctrl/timers/: CMakeLists.txt
include/serial_ctrl/user_controller/: CMakeLists.txt  README.md
include/serial_ctrl/worker_management/: CMakeLists.txt  README.md
include/timer/: Basic_timer.hpp  Basic_timer_impl.hpp  CMakeLists.txt  Custom_timer.hpp  Periodic_timer.hpp  Timer.hpp  Timer_cont.hpp
include/timer/include/: Basic_timer.hpp  Basic_timer_impl.hpp  Custom_timer.hpp  Timer_cont.hpp
include/timer/src/: Timer.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/core_agn/: CMakeLists.txt
libs/core/core_impl/: CMakeLists.txt
libs/ctrl_console/: CMakeLists.txt
libs/ctrl_console/include/: Base_ctrl_console.hpp  Ctrl_cmd.hpp  Ctrl_con_defs.hpp  Ctrl_console.hpp  Ctrl_parser.hpp  Exec.hpp  Policy.hpp  Setup_console.hpp
libs/ctrl_console/src/: Alpha_only.cpp  Ctrl_con_defs.cpp  Mandatority.cpp  Numbers_only.cpp  Policy.cpp  Setup_console.cpp  Upper_only.cpp
libs/ctrl_console/unit_tests/: Base_ctrl_console_test.cpp
libs/main_modules/: CMakeLists.txt
libs/main_modules/main_modules_agn/: CMakeLists.txt
libs/main_modules/main_modules_impl/: CMakeLists.txt
libs/main_modules/unit_tests/: CMakeLists.txt  General_tests.cpp
libs/mqtt_port/: CMakeLists.txt
libs/mqtt_port/include/: Basic_controller.hpp  Connector.hpp  Def.hpp  Executor.hpp  Mqtt_controller.hpp  Receiver.hpp  Sender.hpp  Sender_intf.hpp  Traffic_channel_connector.hpp  Traffic_controller.hpp  Traffic_mqtt_action_listener.hpp  Traffic_mqtt_callback.hpp  Traffic_mqtt_controller.hpp  Traffic_mqtt_ssh.hpp  Traffic_paho_action_listener.hpp  Traffic_paho_callback.hpp  Traffic_paho_controller.hpp  Traffic_receiver.hpp  Traffic_sender.hpp  Universal_get_opt.hpp  Universal_opt.hpp  Validator.hpp
libs/mqtt_port/src/: Basic_controller.cpp  C_callb.cpp  Callbacks.cpp  Channel_conn_callb.cpp  Channel_conn_callb_impl.cpp  Conn_callb.cpp  Conn_callb_impl.cpp  Connector.cpp  Controller.cpp  I_callb.cpp  Receiver.cpp  Send_callb_impl.cpp  Sender.cpp  Server.cpp  Traffic_channel_connector.cpp  Traffic_controller.cpp  Traffic_mqtt_action_listener.cpp  Traffic_mqtt_connect_options.cpp  Traffic_paho_action_listener.cpp  Traffic_paho_controller.cpp  Traffic_receiver.cpp  User_opt.cpp  Validator.cpp
libs/serial_port/: CMakeLists.txt
libs/serial_port/include/: Connection.hpp  Connection_interface.hpp  Ctrl_interface.hpp  Data_interface.hpp  Io_interface.hpp  Serial.hpp
libs/serial_port/src/: Connection.cpp  (+1 more)
libs/setup_loader/: CMakeLists.txt
main/: CMakeLists.txt  main.c
main/auth/: CMakeLists.txt
main/error_handler/: CMakeLists.txt
main/include/: auth.h  cert.h  cmd_defs.h  ctrl_ch copy.h  ctrl_ch.h  error_handler.h  info_ch copy.h  info_ch.h  mqtt_deamon copy.h  mqtt_deamon.h  sim_deamon copy.h  sim_deamon.h  uart_deamon copy.h  uart_deamon.h
main/main/: CMakeLists.txt  main.c
main/mqtt_deamon/: CMakeLists.txt
main/sim_deamon/: CMakeLists.txt
main/src/: auth.c  cert.c  cmd_defs.c  error_handler.c  info_ch.c  main.c  mqtt_deamon.c  set_ch.c  sim_deamon.c  uart_deamon.c
main/uart_deamon/: CMakeLists.txt
(+787 files in other folders)
